syntax = "proto3";

package com.coralogixapis.ai.v3;

import "com/coralogixapis/ai/v3/evaluation.proto";
import "com/coralogixapis/ai/v3/application.proto";
import "google/protobuf/empty.proto";

// Service for managing ai evaluations 
service AiEvaluationsService {
  // Create a new ai evaluation
  rpc CreateAiEvaluation(CreateAiEvaluationRequest) returns (AiEvaluation) {}

  // Get an ai evaluation by its primary key
  rpc GetAiEvaluation(GetAiEvaluationRequest) returns (AiEvaluation) {}

  // Update an existing ai evaluation
  rpc UpdateAiEvaluation(UpdateAiEvaluationRequest) returns (AiEvaluation) {}

  // Delete an ai evaluation
  rpc DeleteAiEvaluation(DeleteAiEvaluationRequest) returns (google.protobuf.Empty) {}

  // List ai evaluations with optional filters
  rpc ListAiEvaluations(ListAiEvaluationsRequest) returns (ListAiEvaluationsResponse) {}

  // Count ai apps per evaluation type
  rpc CountAiAppsPerEvalType(CountAiAppsPerEvalTypeRequest) returns (CountAiAppsPerEvalTypeResponse) {}
}

// Service for managing ai applications 
service AiApplicationsService {
  // List ai applications
  rpc ListAiApplications(ListAiApplicationsRequest) returns (ListAiApplicationsResponse) {}
}
